# OpenModelica

./: .gitignore  README.md  main.py  pyproject.toml
model_runtime/: README.md  demo_two_connected_tanks.bat  demo_two_connected_tanks.sh
openmodelica_launcher/: __init__.py  core.py  gui.py  logging_utils.py
scripts/: package_openmodelica_model.mos
tests/: test_core.py
