[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openmodelica-desktop-launcher"
version = "0.1.0"
description = "PyQt6 desktop app for launching OpenModelica simulation executables."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyQt6>=6.5"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
openmodelica-launcher = "main:main"
